--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,19 @@
 {
-    "name": "faustbrian/namecheap-php-client",
+    "name": "plients/namecheap",
     "description": "A Namecheap Client for PHP",
-    "keywords": ["api", "http", "namecheap"],
+    "keywords": [
+        "api",
+        "http",
+        "namecheap"
+    ],
     "license": "MIT",
-    "authors": [{
-        "name": "Brian Faust",
-        "email": "hello@brianfaust.me",
-        "homepage": "https://brianfaust.me"
-    }],
+    "authors": [
+        {
+            "name": "Brian Faust",
+            "email": "hello@basecode.sh",
+            "homepage": "https://basecode.sh"
+        }
+    ],
     "require": {
         "php": "^7.1",
         "faustbrian/http": "^1.0"
@@ -18,12 +24,12 @@
     },
     "autoload": {
         "psr-4": {
-            "BrianFaust\\Namecheap\\": "src"
+            "Plients\\Namecheap\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "BrianFaust\\Tests\\Namecheap\\": "tests"
+            "Plients\\Tests\\Namecheap\\": "tests"
         }
     },
     "config": {
