--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "http",
         "namecheap"
     ],
-    "license": "MIT",
+    "license": "MPL-2.0",
     "authors": [
         {
             "name": "Brian Faust",
